--- a/configure.in
+++ b/configure.in
@@ -837,12 +837,7 @@ fi
 dnl Check for jdk files
 AC_CHECK_FILE($jni_inc_dir/jni.h,JDK_CFLAGS="-I$jni_inc_dir")
 AC_CHECK_FILE($jni_md_inc_dir/jni_md.h,JDK_CFLAGS="$JDK_CFLAGS -I$jni_md_inc_dir")
-if test "$JDK_CFLAGS" -a "$java_enable" = "yes"
-then
-  JAVA_APS="\$(JAVA_APS)"
-else
-  JAVA_APS=""
-fi
+AS_VAR_SET_IF([JDK_CFLAGS], [AS_CASE([$enable_java], [yes], [JAVA_APS="\$(JAVA_APS)"])])
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
