tdishr depends on treeshr

--- a/Makefile.in
+++ b/Makefile.in
@@ -147,6 +147,7 @@ mdslib: mdstcpip
 mitdevices: gen_device mdsshr tdishr treeshr xmdsshr
 rtevents: mdstcpip mdsshr
 servershr: mdsdcl tdishr treeshr mdsshr mdstcpip
+tdishr: treeshr
 traverser: xmdsshr
 
 am--refresh:
