Use rpath-link on systems that support it by way of an automake conditional

--- a/cdu/Makefile.in
+++ b/cdu/Makefile.in
@@ -225,6 +225,7 @@ RANLIB = @RANLIB@
 REMCAM = @REMCAM@
 REMCAMLIB = @REMCAMLIB@
 RMIC = @RMIC@
+RPATHLINK = @RPATHLINK@
 RTEVENTS = @RTEVENTS@
 SET_MAKE = @SET_MAKE@
 SHARETYPE = @SHARETYPE@
