--- a/wfevent/Makefile.am
+++ b/wfevent/Makefile.am
@@ -6,7 +6,9 @@ libdir=@MAKESHLIBDIR@
 wfevent_SOURCES = wfevent.c
 wfevent_LDADD = -L$(libdir) -lTdiShr -lMdsShr
 #FIXME: Use rpath-link until build system is flattened
+if RPATHLINK
 wfevent_LDFLAGS = -Wl,-rpath-link=$(libdir)
+endif
 
 #FIXME: Clean up LIBS in top level configure
 LIBS=
