--- a/wfevent/Makefile.am
+++ b/wfevent/Makefile.am
@@ -4,7 +4,7 @@ bin_PROGRAMS = wfevent
 libdir=@MAKESHLIBDIR@
 
 wfevent_SOURCES = wfevent.c
-wfevent_LDADD = -L$(libdir) -lTdiShr -lMdsShr
+wfevent_LDADD = -L$(libdir) -lTdiShr -lTreeShr -lMdsShr
 #FIXME: Use rpath-link until build system is flattened
 if RPATHLINK
 wfevent_LDFLAGS = -Wl,-rpath-link=$(libdir)
