Fix a bug in the test for rpath-link

--- a/configure.in
+++ b/configure.in
@@ -26,7 +26,7 @@ AS_VAR_SET_IF([NOF77], [], [AC_PROG_F77([g77 gfortran f90 f95])])
 dnl See if the linker supports -rpath-link
 AC_MSG_CHECKING([whether the linker supports -rpath-link])
 AS_VAR_SET_IF([LDFLAGS], [AS_VAR_SET([save_LDFLAGS], ["$LDFLAGS"])])
-AS_VAR_SET([LDFLAGS], [-Wl,-rpath-link])
+AS_VAR_SET([LDFLAGS], [-Wl,-rpath-link=dummy])
 AC_LINK_IFELSE([AC_LANG_PROGRAM([], [])],
                [AS_VAR_SET([RPATHLINK], [-Wl,-rpath-link])])
 AM_CONDITIONAL([RPATHLINK], [AS_VAR_TEST_SET([RPATHLINK])])
