dwscope depends on xmdsshr

--- a/Makefile.in
+++ b/Makefile.in
@@ -123,6 +123,7 @@ cdu: mdsshr
 ccl: cdu mdsshr mdsdcl
 tcl: cdu mdsshr treeshr tdishr mdstcpip servershr mdsdcl
 camshr: cdu mdsdcl
+dwscope: xmdsshr
 javatraverser: javascope
 mdsdcl: cdu mdsshr
 mdslib: mdstcpip
