--- a/dwscope/Makefile.am
+++ b/dwscope/Makefile.am
@@ -1,7 +1,9 @@
 # Global variables
-AM_CFLAGS = $(X_CFLAGS)
-LDADD = -L@MAKESHLIBDIR@ -lXmdsShr $(X_PRE_LIBS) $(MOTIF_LIBS) $(X_LIBS) $(X_EXTRA_LIBS)
 
+#AC_PATH_XTRA puts CPPFLAGS in a CFLAGS variable. Adjust here.
+AM_CPPFLAGS = $(X_CFLAGS)
+
+LDADD = -L@MAKESHLIBDIR@ -lXmdsShr $(X_PRE_LIBS) $(MOTIF_LIBS) $(X_LIBS) $(X_EXTRA_LIBS)
 
 #MOTIF_LIBS = @XM_LIBS@ @MOTIF_LDSHARE@ @LIBXP@ @LIBXEXT@
 MOTIF_LIBS = -lMrm -lXm -lXt -lX11
