--- a/macosx/Makefile.in
+++ b/macosx/Makefile.in
@@ -36,7 +36,9 @@ POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
 subdir = macosx
-DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
+DIST_COMMON = $(dist_bin_SCRIPTS) $(dist_etc_DATA) \
+	$(dist_scripts_SCRIPTS) $(srcdir)/Makefile.am \
+	$(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.in
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
@@ -68,10 +70,10 @@ am__base_list = \
   sed '$$!N;$$!N;$$!N;$$!N;s/\n/ /g'
 am__installdirs = "$(DESTDIR)$(bindir)" "$(DESTDIR)$(scriptsdir)" \
 	"$(DESTDIR)$(etcdir)"
-SCRIPTS = $(bin_SCRIPTS) $(scripts_SCRIPTS)
+SCRIPTS = $(dist_bin_SCRIPTS) $(dist_scripts_SCRIPTS)
 SOURCES =
 DIST_SOURCES =
-DATA = $(etc_DATA)
+DATA = $(dist_etc_DATA)
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 ACLOCAL = @ACLOCAL@
 AMTAR = @AMTAR@
@@ -284,10 +286,10 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 uiddir = @uiddir@
 etcdir = $(exex_prefix)/etc
-etc_DATA = mdsip.plist
+dist_etc_DATA = mdsip.plist
 scriptsdir = $(exec_prefix)/scripts
-scripts_SCRIPTS = scripts/preinstall scripts/postinstall
-bin_SCRIPTS = mdsplus_launchconfig
+dist_scripts_SCRIPTS = scripts/preinstall scripts/postinstall
+dist_bin_SCRIPTS = mdsplus_launchconfig
 all: all-am
 
 .SUFFIXES:
@@ -321,10 +323,10 @@ $(top_srcdir)/configure: @MAINTAINER_MODE_TRUE@ $(am__configure_deps)
 $(ACLOCAL_M4): @MAINTAINER_MODE_TRUE@ $(am__aclocal_m4_deps)
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
 $(am__aclocal_m4_deps):
-install-binSCRIPTS: $(bin_SCRIPTS)
+install-dist_binSCRIPTS: $(dist_bin_SCRIPTS)
 	@$(NORMAL_INSTALL)
 	test -z "$(bindir)" || $(MKDIR_P) "$(DESTDIR)$(bindir)"
-	@list='$(bin_SCRIPTS)'; test -n "$(bindir)" || list=; \
+	@list='$(dist_bin_SCRIPTS)'; test -n "$(bindir)" || list=; \
 	for p in $$list; do \
 	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
 	  if test -f "$$d$$p"; then echo "$$d$$p"; echo "$$p"; else :; fi; \
@@ -347,18 +349,18 @@ install-binSCRIPTS: $(bin_SCRIPTS)
 	     } \
 	; done
 
-uninstall-binSCRIPTS:
+uninstall-dist_binSCRIPTS:
 	@$(NORMAL_UNINSTALL)
-	@list='$(bin_SCRIPTS)'; test -n "$(bindir)" || exit 0; \
+	@list='$(dist_bin_SCRIPTS)'; test -n "$(bindir)" || exit 0; \
 	files=`for p in $$list; do echo "$$p"; done | \
 	       sed -e 's,.*/,,;$(transform)'`; \
 	test -n "$$list" || exit 0; \
 	echo " ( cd '$(DESTDIR)$(bindir)' && rm -f" $$files ")"; \
 	cd "$(DESTDIR)$(bindir)" && rm -f $$files
-install-scriptsSCRIPTS: $(scripts_SCRIPTS)
+install-dist_scriptsSCRIPTS: $(dist_scripts_SCRIPTS)
 	@$(NORMAL_INSTALL)
 	test -z "$(scriptsdir)" || $(MKDIR_P) "$(DESTDIR)$(scriptsdir)"
-	@list='$(scripts_SCRIPTS)'; test -n "$(scriptsdir)" || list=; \
+	@list='$(dist_scripts_SCRIPTS)'; test -n "$(scriptsdir)" || list=; \
 	for p in $$list; do \
 	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
 	  if test -f "$$d$$p"; then echo "$$d$$p"; echo "$$p"; else :; fi; \
@@ -381,18 +383,18 @@ install-scriptsSCRIPTS: $(scripts_SCRIPTS)
 	     } \
 	; done
 
-uninstall-scriptsSCRIPTS:
+uninstall-dist_scriptsSCRIPTS:
 	@$(NORMAL_UNINSTALL)
-	@list='$(scripts_SCRIPTS)'; test -n "$(scriptsdir)" || exit 0; \
+	@list='$(dist_scripts_SCRIPTS)'; test -n "$(scriptsdir)" || exit 0; \
 	files=`for p in $$list; do echo "$$p"; done | \
 	       sed -e 's,.*/,,;$(transform)'`; \
 	test -n "$$list" || exit 0; \
 	echo " ( cd '$(DESTDIR)$(scriptsdir)' && rm -f" $$files ")"; \
 	cd "$(DESTDIR)$(scriptsdir)" && rm -f $$files
-install-etcDATA: $(etc_DATA)
+install-dist_etcDATA: $(dist_etc_DATA)
 	@$(NORMAL_INSTALL)
 	test -z "$(etcdir)" || $(MKDIR_P) "$(DESTDIR)$(etcdir)"
-	@list='$(etc_DATA)'; test -n "$(etcdir)" || list=; \
+	@list='$(dist_etc_DATA)'; test -n "$(etcdir)" || list=; \
 	for p in $$list; do \
 	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
 	  echo "$$d$$p"; \
@@ -402,9 +404,9 @@ install-etcDATA: $(etc_DATA)
 	  $(INSTALL_DATA) $$files "$(DESTDIR)$(etcdir)" || exit $$?; \
 	done
 
-uninstall-etcDATA:
+uninstall-dist_etcDATA:
 	@$(NORMAL_UNINSTALL)
-	@list='$(etc_DATA)'; test -n "$(etcdir)" || list=; \
+	@list='$(dist_etc_DATA)'; test -n "$(etcdir)" || list=; \
 	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
 	test -n "$$files" || exit 0; \
 	echo " ( cd '$(DESTDIR)$(etcdir)' && rm -f" $$files ")"; \
@@ -498,13 +500,13 @@ info: info-am
 
 info-am:
 
-install-data-am: install-etcDATA install-scriptsSCRIPTS
+install-data-am: install-dist_etcDATA install-dist_scriptsSCRIPTS
 
 install-dvi: install-dvi-am
 
 install-dvi-am:
 
-install-exec-am: install-binSCRIPTS
+install-exec-am: install-dist_binSCRIPTS
 
 install-html: install-html-am
 
@@ -542,23 +544,24 @@ ps: ps-am
 
 ps-am:
 
-uninstall-am: uninstall-binSCRIPTS uninstall-etcDATA \
-	uninstall-scriptsSCRIPTS
+uninstall-am: uninstall-dist_binSCRIPTS uninstall-dist_etcDATA \
+	uninstall-dist_scriptsSCRIPTS
 
 .MAKE: install-am install-strip
 
 .PHONY: all all-am check check-am clean clean-generic distclean \
 	distclean-generic distdir dvi dvi-am html html-am info info-am \
-	install install-am install-binSCRIPTS install-data \
-	install-data-am install-dvi install-dvi-am install-etcDATA \
+	install install-am install-data install-data-am \
+	install-dist_binSCRIPTS install-dist_etcDATA \
+	install-dist_scriptsSCRIPTS install-dvi install-dvi-am \
 	install-exec install-exec-am install-html install-html-am \
 	install-info install-info-am install-man install-pdf \
-	install-pdf-am install-ps install-ps-am install-scriptsSCRIPTS \
-	install-strip installcheck installcheck-am installdirs \
-	maintainer-clean maintainer-clean-generic mostlyclean \
-	mostlyclean-generic pdf pdf-am ps ps-am uninstall uninstall-am \
-	uninstall-binSCRIPTS uninstall-etcDATA \
-	uninstall-scriptsSCRIPTS
+	install-pdf-am install-ps install-ps-am install-strip \
+	installcheck installcheck-am installdirs maintainer-clean \
+	maintainer-clean-generic mostlyclean mostlyclean-generic pdf \
+	pdf-am ps ps-am uninstall uninstall-am \
+	uninstall-dist_binSCRIPTS uninstall-dist_etcDATA \
+	uninstall-dist_scriptsSCRIPTS
 
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
