--- a/actions/Makefile.am
+++ b/actions/Makefile.am
@@ -2,7 +2,9 @@
 
 #AC_PATH_XTRA puts CPPFLAGS in a CFLAGS variable. Adjust here.
 AM_CPPFLAGS = $(X_CFLAGS)
-
+if RPATHLINK
+AM_LDFLAGS = $(RPATHLINK)=$(libdir)
+endif
 LDADD = -L@MAKESHLIBDIR@ -lXmdsShr -lTreeShr -lTdiShr -lMdsShr $(X_PRE_LIBS) $(X_LIBS) $(MOTIF_LIBS) $(X_EXTRA_LIBS)
 
 MOTIF_LIBS = -lMrm -lXm -lXt -lX11
