--- a/dwscope/Makefile.in
+++ b/dwscope/Makefile.in
@@ -339,7 +339,7 @@ top_srcdir = @top_srcdir@
 uiddir = @MAKEUIDDIR@
 
 #AC_PATH_XTRA puts CPPFLAGS in a CFLAGS variable. Adjust here.
-AM_CPPFLAGS = $(X_CFLAGS)
+AM_CPPFLAGS = $(X_CFLAGS) -D_NO_DXm
 LDADD = -L@MAKESHLIBDIR@ -lXmdsShr $(X_PRE_LIBS) $(X_LIBS) $(MOTIF_LIBS) $(X_EXTRA_LIBS)
 
 #MOTIF_LIBS = @MOTIF_LDSHARE@ @LIBXP@ @LIBXEXT@
