rpath-link for dwscope

--- a/dwscope/Makefile.am
+++ b/dwscope/Makefile.am
@@ -2,7 +2,9 @@
 
 #AC_PATH_XTRA puts CPPFLAGS in a CFLAGS variable. Adjust here.
 AM_CPPFLAGS = $(X_CFLAGS) -D_NO_DXm
-
+if RPATHLINK
+AM_LDFLAGS = $(RPATHLINK)=@MAKESHLIBDIR@
+endif
 LDADD = -L@MAKESHLIBDIR@ -lXmdsShr $(X_PRE_LIBS) $(X_LIBS) $(MOTIF_LIBS) $(X_EXTRA_LIBS)
 
 #MOTIF_LIBS = @MOTIF_LDSHARE@ @LIBXP@ @LIBXEXT@
@@ -28,18 +30,14 @@ bin_PROGRAMS = dwscope
 dwscope_SOURCES = dwscope.c dwscopesubs.c evaluate.c
 dwscope_CPPFLAGS = $(AM_CPPFLAGS) -D_LOCAL_ACCESS
 dwscope_LDADD = $(LDADD) -lMdsShr -lTdiShr -lTreeShr
-dwscope_LDFLAGS = 
-#$(MLIBS)
 
 bin_PROGRAMS += dwscope_remote
 dwscope_remote_SOURCES = $(dwscope_SOURCES) $(XMDSSRC) RemoteDummies.c
 dwscope_remote_LDADD = $(LDADD) libXmdsWC.a -lMdsIpShr
-dwscope_remote_LDFLAGS = $(MLIBS)
 
 bin_PROGRAMS += dwpad
 dwpad_SOURCES = dwpad.c dwscopesubs.c $(XMDSSRC)
 dwpad_LDADD = $(LDADD) libXmdsWC.a
-dwpad_LDFLAGS = $(MLIBS)
 
 # User interface descriptions, installed as generic data but with build rules
 uiddir = @MAKEUIDDIR@
